[package]
name = "minesweeper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.17"
wgpu = "0.12.0"
pollster = "0.2.5"
winapi = "0.3.9"
mex-sys = "0.1.0"
libc = "0.2.126"
bytemuck = { version = "1.4", features = [ "derive" ] }
