[package]
name = "minesweeper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# -Zbuild-std=std,panic_abort -Zbuild-std-features=panic_immediate_abort
[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1

[dependencies]
rand = "0.8.5"
winit = "0.27.5"
wgpu = "0.14.0"
pollster = "0.2.5"
